<resources>
    <string name="app_name">WeekendAssignment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_">Email</string>
    <string name="password_">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_cost">Product Cost</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_type">Enter Product Type</string>
    <string name="enter_product_cost">Enter Product Cost</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_">Add Product</string>
    <string name="app_logo">App Logo</string>
    <string name="weekend_assignment">Weekend Assignment</string>
</resources>