<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type" />

            <TextView
                android:id="@+id/productCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_cost" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
